--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<br><br>
 		<a href="/proj4/index.html">Project 4</a>
 		<br><br>
-		<a href="/projFin/">Final Project Proposal</a>
+		<a href="/projFin/index.html">Final Project Proposal</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
