first final website

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<a href="/proj4/index.html">Project 4</a>
 		<br><br>
 		<a href="/projFin/index.html">Final Project Proposal</a>
+		<br><br>
+		<a href="/projSubmit/index.html">CS 184 Final Project: Cloud to Mesh</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
