--- a/projSubmit/index.html
+++ b/projSubmit/index.html
@@ -181,6 +181,33 @@
           <table style="width:100%">
             <tr>
               <td>
+                <img src="images/cow1.gif" align="middle" width="400px" />
+                <figcaption>
+                  Progressive generation of mesh using BPA ran on cow point cloud
+                </figcaption>
+              </td>
+              <td>
+                <img src="images/cow2.gif" align="middle" width="400px" />
+                <figcaption>
+                  Each iteration is a pass of BPA with a different value for ball radii
+                </figcaption>
+              </td>
+              <td>
+                <img src="images/rabbit.gif" align="middle" width="400px" />
+                <figcaption>
+                  Progressive generation of mesh using BPA ran on stanford bunny. Many 
+                  faces form in a single iteration due to the homogeneity of the mesh.
+                </figcaption>
+              </td>
+              <td>
+                <img src="images/teapot.gif" align="middle" width="400px" />
+                <figcaption>
+                  Progressive generation of mesh using BPA ran on teapot
+                </figcaption>
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <img src="images/10.png" align="middle" width="400px" />
                 <figcaption>
                   First steps, struggling to generate a cube properly:
@@ -209,7 +236,7 @@
               <td>
                 <img src="images/14.png" align="middle" width="400px" />
                 <figcaption>
-                  Stanford Teapot:
+                  Teapot:
                 </figcaption>
               </td>
             </tr>
