--- a/projSubmit/index.html
+++ b/projSubmit/index.html
@@ -309,22 +309,50 @@
          <dl>
             <dt>William Shue</dt>
             <dd>
-              stuff
-            </dd>
-            <br/>
-            <dt>William Louis</dt>
-            <dd>
-              stuff
+              <ul>
+                <li>Proposal</li>
+                <li>Milestone</li>
+                <li>Final Writeup/Slides/Video</li>
+                <li>The entirety of ball-pivot-algorithm</li>
+                <li>queryGrid(), findSeed(), ballPivot(), fitBall(), nextActiveEdge(), BPA(), output()</li>
+                <li>Adding boilerplate code to project 2 (meshedit) so that our project could interface with its GUI and be run using the same program</li>
+                <li>Hosting writeup on webpage</li>
+              </ul>
             </dd>
             <br/>
             <dt>Amrita Rajan</dt>
             <dd>
-              stuff
+              <ul>
+                <li>Proposal</li>
+                <li>Milestone</li>
+                <li>Final Writeup/Slides/Video</li>
+                <li>Mesh regularization algorithm: Central algorithm (regularize_mesh())</li>
+                <li>Operations: CollapseEdge()</li>
+                <li>Operations: vertexShift()</li>
+                <li>Hosting writeup on webpage</li>
+              </ul>
+            </dd>
+            <br/>
+            <dt>William Louis</dt>
+            <dd>
+              <ul>
+                <li>Proposal</li>
+                <li>Milestone</li>
+                <li>Final Writeup/Slides/Video</li>
+                <li>Mesh regularization algorithm: Projection main algorithm and steps: Projection compute position and normal sub-algorithms</li>
+                <li>Vertex shift algorithm</li>
+                <li>Hosting writeup on webpage</li>
+              </ul>
             </dd>
             <br/>
             <dt>Tiger Ma</dt>
             <dd>
-              stuff
+                <li>Proposal</li>
+                <li>Milestone</li>
+                <li>Final Writeup/Slides/Video</li>
+                <li>Mesh Regularization Algorithm: Projection main algorithm and steps: projectionVertex()</li>
+                <li>Operations: findClosestTriangle()</li>
+                <li>Hosting writeup on webpage</li>
             </dd>
             <br/>
          </dl>
